-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11.0.4, 14
-
Component/s: hotspot
-
b21
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246329 | 13.0.4 | Markus Grönlund | P3 | Resolved | Fixed | b04 |
| JDK-8238864 | 11.0.7 | Markus Grönlund | P3 | Resolved | Fixed | b03 |
Intermittently, JFR creates a recording where one or more methods in stack trace structures can not be resolved against the constant pool.
I am attaching the JSON fragment of such a corrupted recording.
I am attaching the JSON fragment of such a corrupted recording.
- backported by
-
JDK-8238864 Missing constant pool entry for a method in stacktrace
-
- Resolved
-
-
JDK-8246329 Missing constant pool entry for a method in stacktrace
-
- Resolved
-
- relates to
-
JDK-8234059 Stress test fails with "Unexpected Exception in thread JFR Event Stream"
-
- Closed
-
-
JDK-8233111 Epoch shift synchronization point for Compiler threads
-
- Resolved
-
-
JDK-8261354 SIGSEGV at MethodIteratorHost
-
- Resolved
-