8230400: Missing constant pool entry for a method in stacktrace

Reviewed-by: egahlin